add task to todo

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,8 @@ finding in the code.
 
 Update the oracle so that it asks you about which spaces vectors belong to. 
 
+Update readme file.
+
 DONE:
 
 To do this, the oracle will need to obtain a list of spaces from the domain.
