minor edit todo

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,9 +7,12 @@ finding in the code.
 
 Update the oracle so that it asks you about which spaces vectors belong to. 
 
+Do the same stuff for expressions that we just did for vector instances.
+
+Implement domain.isConsistent. This means iterating over the domain objects and writing out a corresponding Lean file and sending it off to the type checker.
+
 Update readme file.
 
 DONE:
 
-To do this, the oracle will need to obtain a list of spaces from the domain.
 Add a method to the domain to provide the list of available spaces.
